# projects

./: .gitignore  README.md  setupLinux64.sh
ImageJ1Macros/: ConditionPsf_simple.ijm  ConditionPsf_toDesiredSize.ijm  CropExtendedImages.ijm  CropPhantomImage.ijm  RecolorChannels.ijm  StackStats.ijm
Scripts/: AllInOne.sh  CreatePhantoms.sh  CreatePhantoms_ConstantModel.sh  CreatePhantoms_ShellModel.sh  CreatePhantoms_challengeModel.sh  CreatePhantoms_hackScript.sh  CropChallengeImages_hackscript.sh  DeconvolutionTest.sh  Deconvolve.sh  DeconvolveChallengeImages.sh  DeconvolveChallengeImages_hackscript.sh  DeconvolvePhantoms_challengeModel.sh  ExtendChallengeImages_hackscript.sh  ExtendChallengeImages_zeroes.sh  NoiseDenoise.sh  Simple.sh  SimpleCreatePhantoms.sh  Simpler.sh  Temp.sh  TestFuzzy.sh
Scripts/BashScripts/: GenerateJNIForPsf.sh  IJHighMemory.sh  TestScripting.sh  setup.sh
Scripts/FuzzyDeconvolution/: CreatePhantoms_fuzzyDecon.sh  TestFuzzy.sh
Scripts/GrandChallenge/: CreatePhantoms_challengeModel.sh  CropChallengeImages_hackscript.sh  DeconvolvePhantoms_noncirculant.sh  DeconvolvePhantoms_reflection.sh
Scripts/HackScripts/FuzzyDeconvolution/: CreatePhantoms_fuzzyDecon_simple.sh  PsfParams.sh
Scripts/HackScripts/GrandChallenge/: CreatePhantoms_challengeModel.sh  DeconvolveChallengeImages.sh  DeconvolveChallengeImages_noncirculant.sh  ExtendChallengeImages_challengeModel.sh  ExtendChallengeImages_reflectionModel.sh
Scripts/Jython/: Simple.py
Scripts/Jython/Deconvolve/: Deconvolve.py  Deconvolve_noncirculant.py  Deconvolve_reflection.py  Deconvolve_seminoncirculant.py  Deconvolve_simple.py  PSFAberrated.py
Scripts/Jython/Experiments/Kurt Thorn Data/: tests.py
Scripts/Jython/Grand_Challenge/: DeconvolveChallengeImages_noncirculant.py  DeconvolveChallengeImages_reflection.py  ExtendChallengeImages_noncirculant.py  ExtendChallengeImages_reflection.py
Scripts/Jython/Phantoms/: AddShell.py  CreatePhantom.py  CreatePhantom_noncirculant.py  CreatePhantom_noncirculant_temp.py  Experiment.py  Phantoms.py  PsfParameters.py  test.py
Scripts/Jython/Phantoms/Experiments/: Assymetric2Spheres.py  RandomPoints.py  RandomSpheres.py  RandomSpheresZRatio.py  Sphere.py  Spheres2.py
Scripts/Jython/Psfs/: PSFExample.py  PSFLowNA.py  PSFModel.py  PSFUltraLowNA.py  PSF_NA14_CY3_65_200_coverslip.py  PSF_NA14_DAPI_65_200.py  PSF_NA14_DAPI_65_200_coverslip.py
Scripts/Jython/TestOps/: TestOps.py
Scripts/jruby/: test.rb
Scripts/jruby/Phantoms/: CreatePhantom_noncirculant.rb
truenorthJ/: Install.sh  pom.xml
truenorthJ/ImageJ2Plugins/: pom.xml
truenorthJ/ImageJ2Plugins/DeconvolutionTest/: pom.xml  scriptName  test.t
truenorthJ/ImageJ2Plugins/FuzzyDeconvolution/: pom.xml
truenorthJ/ImageJ2Plugins/ScriptTest/: pom.xml
truenorthJ/ImageJ2Plugins/commands/: pom.xml  psf_xcosm.wu.info
truenorthJ/ImageJ2Plugins/functions/: Untitled0.ipynb  pom.xml
truenorthJ/ImageJ2Plugins/gui/: pom.xml
truenorthJ/ImageJ2Plugins/itk-imagej-tn/: pom.xml
truenorthJ/ImageJ2Plugins/ops/: pom.xml
truenorthJ/ImageJ2Plugins/ops-gpu/: multiply.cu  multiply.ptx  pom.xml
truenorthJ/ImageJ2Plugins/simplecommands/: pom.xml
truenorthJ/backup/native/: CMakeLists.txt
truenorthJ/backup/native/YacuDecuCode/: CMakeLists.txt  deconv.cu
truenorthJ/native/: pom.xml
truenorthJ/native/COSM-0.7.4-Source/: CPackConfig.cmake
truenorthJ/native/CosmPsfWrapper/: CMakeLists.txt  com_truenorth_functions_psf_PsfGenerator.cpp
truenorthJ/native/YacuDecuCode/: CMakeLists.txt  YacuDecuWrapper.i  com_truenorth_gpu_wrappers_YacuDecuWrapper.cpp
truenorthJ/native/YacuDecuWrapper/: CMakeLists.txt  com_truenorth_gpu_wrappers_YacuDecuWrapper.h  deconv.cu
truenorthJ/native/YacuDecuWrapper/YacuDecuCode/: CMakeLists.txt
truenorthJ/nativebuild/YacuDecuCode/: YacuDecuWrapperJAVA_wrap.c
(+218 files in other folders)
